<?xml version="1.0"?>
<package>
  <name>kelo_hitbot_driver</name>
  <version>0.0.0</version>
  <description>The kelo_hitbot_driver package</description>
  <maintainer email="tan@locomotec.com">Leonardo Tan</maintainer>
  <license>intern</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
